--- a/bottomNavBar/app/src/main/AndroidManifest.xml
+++ b/bottomNavBar/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.BottomNavBar"
         tools:targetApi="31">
         <activity
+            android:name=".TestingActivity"
+            android:exported="false" />
+        <activity
             android:name=".ProfileActivity"
             android:exported="false" />
         <activity
